<resources>
    <string name="app_name">EnRuDictionary</string>
    <string name="enter_word_hint">Enter a word to translate</string>
    <string name="no_data_text">No results</string>
    <string name="error_message_prefix">An error occurred: </string>
    <string name="translation_direction_text">Translation direction:</string>
    <string name="no_internet_banner_text">No Internet!!!</string>
    <string name="error_getting_connection_status_message">Error getting connection status: </string>
    <string name="word_label_text">Word:</string>
    <string name="word_meaning_label_text">Meaning:</string>
    <string name="transcription_label_text">Transcription:</string>
    <string name="history_fragment_title">History</string>
    <string name="history_menu_item">History</string>
    <string name="details_fragment_title">Description</string>
    <string name="date_format">dd-MM-yy HH:mm</string>
    <string name="search_history_menu_item">Search history</string>
    <string name="search_history_text_input_hint">Enter a word to find</string>
    <string name="close_button_text">Close</string>
</resources>